--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>タイトル</title>
   </head>
   <body>
-    <p style="color:green">さらにさらにさらに書き換えたよー</p>
+    <p style="color:red">さらにさらにさらに書き換えたよー</p>
   </body>
 </html>
